updated nav and footer links and updated token section with new text

--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -22,34 +22,34 @@
       <!-- Navigation -->
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://cyborg.ai">
+          <a class="nav-link" href="{{webRoot}}">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://cyborg.ai/#cybot">
+          <a class="nav-link" href="{{webRoot}}/#cybot">
             Cybot
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://cyborg.ai/#token">
+          <a class="nav-link" href="{{webRoot}}/#token">
             Token
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://cyborg.ai/#nft">
+          <a class="nav-link" href="{{webRoot}}/#nft">
             NFT
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://cyborg.ai/#community">
+          <a class="nav-link" href="{{webRoot}}/#community">
             Community
           </a>
         </li>
       </ul>
 
       <!-- Button -->
-      <a class="navbar-btn btn btn-sm btn-{{button}} lift ms-auto" href="https://themes.getbootstrap.com/product/landkit/" target="_blank">
+      <a class="navbar-btn btn btn-sm btn-{{button}} lift ms-auto" href="https://t.me/+NpEcXYNovApmNmZh" target="_blank">
         Get Started
       </a>
 
