--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -63,12 +63,12 @@
         <!-- List -->
         <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
           <li class="mb-3">
-            <a href="https://cyborg.ai/#token" class="text-reset">
+            <a href="{{webRoot}}/#token" class="text-reset">
               Token
             </a>
           </li>
           <li>
-            <a href="https://cyborg.ai/#nft" class="text-reset">
+            <a href="{{webRoot}}/#nft" class="text-reset">
               NFT
             </a>
           </li>
