--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -19,3 +19,14 @@
 .bg-pattern-stars-big {
   background-image: url(../img/patterns/stars-2.svg);
 }
+
+.navbar-collapse {
+  background-color: rgba(0,0,0,.95);
+}
+
+
+@media (max-width: 991.98px) {
+  .navbar-collapse .navbar-nav .nav-item + .nav-item {
+    border-top: 1px solid #111;
+  }
+}
